--- a/.github/workflows/CI-CD-backend.yaml
+++ b/.github/workflows/CI-CD-backend.yaml
@@ -77,12 +77,12 @@ jobs:
             Results for commit: ${{ github.event.pull_request.head.sha }}
 
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.working-directory }}\`, Workflow: \`${{ github.workflow }}\`*`;
-              
-            github.issues.createComment({
+
+            github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: output
+              body: `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\``
             })
             
       - name: Terraform Plan Status
