--- a/.github/workflows/CI-CD-backend.yaml
+++ b/.github/workflows/CI-CD-backend.yaml
@@ -82,7 +82,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\``
+              body:  output
             })
             
       - name: Terraform Plan Status
