--- a/.github/workflows/CI-CD-infrastructure-eks.yaml
+++ b/.github/workflows/CI-CD-infrastructure-eks.yaml
@@ -57,6 +57,8 @@ jobs:
         if: github.event_name == 'pull_request'
         run: terraform plan -no-color
         continue-on-error: true
+        env:
+          TF_VAR_github_token: ${{ secrets.MY_GITHUB_TOKEN }}
 
       - uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
@@ -94,3 +96,5 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
+        env:
+          TF_VAR_github_token: ${{ secrets.MY_GITHUB_TOKEN }}
