--- a/aws/infrastructure-by-single-command/k8s/development/values.yaml
+++ b/aws/infrastructure-by-single-command/k8s/development/values.yaml
@@ -3,13 +3,12 @@ spec:
     server: https://kubernetes.default.svc
 
 source:
-  repoURL: git@gitlab.com:example/example.git
+  repoURL: git@github.com:example/example.git
   targetRevision: main
-  path: k8s/charts/test-app/
+  path: aws/infrastructure-by-single-command/k8s/charts/app/
 
 appHosts:
-  app1: app-1.example.com
-  app2: app-2.example.com
+  app: app.example.com
 
 clusterIssuer:
   name: letsencrypt-prod
