Added app to ArgoCD (#16)

--- a/aws/infrastructure-by-single-command/k8s/charts/app/templates/ingress.yaml
+++ b/aws/infrastructure-by-single-command/k8s/charts/app/templates/ingress.yaml
@@ -8,10 +8,11 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - {{ .Values.hosts.app }}
+    - {{ .Values.hosts.app1 }}
+    - {{ .Values.hosts.app2 }}
     secretName: app-tls
   rules:
-   - host: {{ .Values.hosts.app }}
+   - host: {{ .Values.hosts.app1 }}
      http:
         paths:
           - pathType: Prefix
@@ -19,5 +20,15 @@ spec:
             backend:
               service:
                 name: kuber-service-1
+                port: 
+                  number: 80
+   - host: {{ .Values.hosts.app2 }}
+     http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: kuber-service-2
                 port: 
                   number: 80
