--- a/aws/infrastructure-by-single-command/k8s/infrastructure/applications/values.yaml
+++ b/aws/infrastructure-by-single-command/k8s/infrastructure/applications/values.yaml
@@ -7,7 +7,7 @@ aws:
 clusterName: eks-cluster
 
 source:
-  repoURL: git@gitlab.com:example/example.git
+  repoURL: git@github.com:example/example.git
   targetRevision: main
 
 bootstrapApp:
