--- a/aws/infrastructure-by-single-command/k8s/charts/app/templates/deploy-2.yaml
+++ b/aws/infrastructure-by-single-command/k8s/charts/app/templates/deploy-2.yaml
@@ -1,21 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kuber-1
+  name: kuber-2
   labels:
-    app: kuber-1
+    app: kuber-2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: http-server-1
+      app: http-server-2
   template:
     metadata:
       labels:
-        app: http-server-1
+        app: http-server-2
     spec:
       containers:
       - name: kuber-app
-        image: nginx:latest
+        image: lyubenok/app:v2.0.0
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80
+        - containerPort: 8000
