--- a/aws/infrastructure-by-single-command/k8s/charts/app/templates/svc-1.yaml
+++ b/aws/infrastructure-by-single-command/k8s/charts/app/templates/svc-1.yaml
@@ -8,6 +8,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80 #container port
+      targetPort: 8000
   type: ClusterIP
 
